2004-12-02  Bart Veer  <bartv@ecoscentric.com>

	* src/am29xxxxx.c, include/am29xxxxx_dev.h: <cyg/io/flash_priv.h>
	no longer exists, use <cyg/io/flash_dev.h> instead.

2004-11-29  Bart Veer  <bartv@ecoscentric.com>

	* include/am29xxxxx_dev.h, src/am29xxxxx.c: eliminate
	hwr_map_error() support, no longer needed
	
	* include/am29xxxxx_dev.h, src/am29xxxxx.c, src/am29xxxxx_aux.c:
	The dummy init/query/lock/unlock functions have been moved to the
	generic flash package. That also now exports an anonymizer
	function.

2004-11-22  Bart Veer  <bartv@ecoscentric.com>

	* include/am29xxxxx_dev.h, src/am29xxxxx.c, src/am29xxxxx_aux.c,
	doc/am29xxxxx.sgml: implement changes to the interface between the
	generic flash code and the device drivers.
	* include/am29xxxxx_dev.h: rename cyg_block_info to
	cyg_flash_block_info

2004-11-21  Bart Veer  <bartv@ecoscentric.com>

	* doc/am29xxxxx.sgml: describe CDL implications for custom locking
	functions and additional devices.
	
	* cdl/flash_am29xxxxx_v2.cdl: CYGHWR_IO_FLASH_DEVICE_V2 is now
	implicit

2004-11-05  Bart Veer  <bartv@ecoscentric.com>

	* New AM29xxxxx flash driver created

//===========================================================================
//####ECOSGPLCOPYRIGHTBEGIN####
// -------------------------------------------
// This file is part of eCos, the Embedded Configurable Operating System.
// Copyright (C) 2004 eCosCentric Limited
//
// eCos is free software; you can redistribute it and/or modify it under
// the terms of the GNU General Public License as published by the Free
// Software Foundation; either version 2 or (at your option) any later version.
//
// eCos is distributed in the hope that it will be useful, but WITHOUT ANY
// WARRANTY; without even the implied warranty of MERCHANTABILITY or
// FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
// for more details.
//
// You should have received a copy of the GNU General Public License along